// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EpochGPS > fromDate 1`] = `
EpochUTC {
  "posix": 1614556800,
}
`;

exports[`EpochGPS > fromDateTime 1`] = `
EpochUTC {
  "posix": 1614574800,
}
`;

exports[`EpochGPS > fromDateTimeString 1`] = `
EpochUTC {
  "posix": 1614556800,
}
`;

exports[`EpochGPS > fromDefinitiveString 1`] = `
EpochUTC {
  "posix": 1609459200,
}
`;

exports[`EpochGPS > fromJ2000TTSeconds 1`] = `
EpochUTC {
  "posix": 946727935.816,
}
`;

exports[`EpochGPS > should calculate the GMST angle 1`] = `4.088037525758033`;

exports[`EpochGPS > should calculate the GMST angle in degrees 1`] = `234.22729671703883`;

exports[`EpochGPS > should convert to a GPS epoch 1`] = `
EpochGPS {
  "seconds": 104417.99999993818,
  "week": 2147,
}
`;

exports[`EpochGPS > should convert to a TAI epoch 1`] = `
EpochTAI {
  "posix": 1614574837,
}
`;

exports[`EpochGPS > should convert to a TDB epoch 1`] = `
EpochTDB {
  "posix": 1614574869.1853862,
}
`;

exports[`EpochGPS > should convert to a TT epoch 1`] = `
EpochTT {
  "posix": 1614574869.184,
}
`;

exports[`EpochGPS > should convert to an MJD 1`] = `59274.20833333349`;

exports[`EpochGPS > should convert to an MJD GSFC 1`] = `29274.70833333349`;

exports[`EpochGPS > should handle century leap year edge cases 1`] = `
EpochUTC {
  "posix": 951782400,
}
`;

exports[`EpochGPS > should handle definitive string with different days 1`] = `
EpochUTC {
  "posix": 1640995199,
}
`;

exports[`EpochGPS > should handle fromDateTimeString without Z suffix 1`] = `
EpochUTC {
  "posix": 1614600000,
}
`;

exports[`EpochGPS > should handle full datetime in fromDate 1`] = `
EpochUTC {
  "posix": 1623767445,
}
`;

exports[`EpochGPS > should handle leap year correctly in fromDate 1`] = `
EpochUTC {
  "posix": 1582934400,
}
`;

exports[`EpochGPS > should handle leap year correctly in fromDate 2`] = `
EpochUTC {
  "posix": 1614556800,
}
`;

exports[`EpochGPS > should roll the epoch backward 1`] = `
EpochUTC {
  "posix": 1614574740,
}
`;

exports[`EpochGPS > should roll the epoch forward 1`] = `
EpochUTC {
  "posix": 1614574860,
}
`;
